--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
+  "homepage":"https://shubidubi13.github.io/kukljin-info-brochure/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
