--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://shubidubi13.github.io/kukljin-info-brochure/",
+  "homepage": "https://www.dareprevoz.com/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
